@@ -263,6 +263,15 @@ static void setContext(BinRequestContext * binCtx, OperationHdr * oHdr,
    binCtx->chunkedMode = 0;
 }
 
+static char* getRole(const CMPIContext * context) 
+{
+  CMPIStatus st = {0, NULL};
+  CMPIData roledata = CMGetContextEntry(context, "CMPIRole", &st);
+  if (st.rc == CMPI_RC_OK) 
+    return CMGetCharPtr(roledata.value.string);
+  else
+    return NULL;
+}
 static void cpyResult(CMPIResult *result, CMPIArray *ar, int *c)
 {
    CMPIArray *r;
@@ -507,10 +516,12 @@ static CMPIInstance *getInstance(const CMPIBroker * broker,
          sreqSize+=sizeof(MsgSegment);
       }
       sreq=(GetInstanceReq*)calloc(1,sreqSize);
-      sreq->hdr.count=ps+2;
+      sreq->hdr.count=ps+GI_REQ_REG_SEGMENTS;
       sreq->hdr.operation=OPS_GetInstance;
    
       setContext(&binCtx, &oHdr, &sreq->hdr, sreqSize, context, cop, NULL, NULL);
+      sreq->userRole = setCharsMsgSegment(getRole(context));
+
       _SFCB_TRACE(1,("--- for %s %s",(char*)oHdr.nameSpace.data,(char*)oHdr.className.data));
       
       checkReroute(broker, context, &oHdr);
@@ -605,7 +616,7 @@ static CMPIObjectPath *createInstance(const CMPIBroker * broker,
       _SFCB_TRACE(1,("--- for %s %s",(char*)oHdr.nameSpace.data,(char*)oHdr.className.data)); 
 
       sreq.instance = setInstanceMsgSegment(inst);
-      sreq.userRole = setCharsMsgSegment(NULL);
+      sreq.userRole = setCharsMsgSegment(getRole(context));
       
       checkReroute(broker, context, &oHdr);
       
@@ -688,12 +699,13 @@ static CMPIStatus modifyInstance(const CMPIBroker * broker,
       for (ps=0,p=props; p && *p; p++,ps++) 
          sreqSize+=sizeof(MsgSegment);      
       sreq=(ModifyInstanceReq*)calloc(1,sreqSize);
-      sreq->hdr.count=ps+3;
+      sreq->hdr.count=ps+MI_REQ_REG_SEGMENTS;
       sreq->hdr.operation=OPS_ModifyInstance;
-      sreq->userRole = setCharsMsgSegment(NULL);
       
       setContext(&binCtx, &oHdr, &sreq->hdr, sreqSize, context, cop, NULL, NULL);
       _SFCB_TRACE(1,("--- for %s %s",(char*)oHdr.nameSpace.data,(char*)oHdr.className.data));
+      sreq->userRole = setCharsMsgSegment(getRole(context));
+      //      fprintf(stderr, "brokerUpc MI: CMPIRole is \"%s\"\n", CMGetCharPtr(roledata.value.string));
       
       checkReroute(broker, context, &oHdr); 
       
@@ -764,7 +776,7 @@ static CMPIStatus deleteInstance(const CMPIBroker * broker,
    
       setContext(&binCtx, &oHdr, &sreq.hdr, sizeof(sreq), context, cop, NULL, NULL);
       _SFCB_TRACE(1,("--- for %s %s",(char*)oHdr.nameSpace.data,(char*)oHdr.className.data));
-      sreq.userRole = setCharsMsgSegment(NULL);
+      sreq.userRole = setCharsMsgSegment(getRole(context));
       
       checkReroute(broker, context, &oHdr); 
       
@@ -834,7 +846,7 @@ static CMPIEnumeration *execQuery(const CMPIBroker * broker,
       
       sreq.query = setCharsMsgSegment(query);
       sreq.queryLang = setCharsMsgSegment(lang);
-      sreq.userRole = setCharsMsgSegment(NULL);
+      sreq.userRole = setCharsMsgSegment(getRole(context));
       
       irc = getProviderContext(&binCtx, &oHdr);
 
@@ -903,7 +915,7 @@ static CMPIEnumeration *enumInstances(const CMPIBroker * broker,
 {
    EnumInstancesReq sreq = BINREQ(OPS_EnumerateInstances, EI_REQ_REG_SEGMENTS);
    OperationHdr oHdr = { OPS_EnumerateInstances, 2 };
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, props, NULL, NULL, NULL,
                              NULL, OPS_EnumerateInstances, &sreq.hdr, &oHdr,
@@ -916,7 +928,7 @@ static CMPIEnumeration *enumInstanceNames(const CMPIBroker * broker,
 {
    EnumInstanceNamesReq sreq = BINREQ(OPS_EnumerateInstanceNames, EIN_REQ_REG_SEGMENTS);
    OperationHdr oHdr = { OPS_EnumerateInstanceNames, 2 };
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, NULL, NULL, NULL, NULL,
                              NULL, OPS_EnumerateInstanceNames, &sreq.hdr, &oHdr,
@@ -947,7 +959,7 @@ static CMPIEnumeration *associators(const CMPIBroker * broker,
    sreq.role = setCharsMsgSegment(role);
    sreq.assocClass = setCharsMsgSegment(assocclass);
    sreq.resultRole = setCharsMsgSegment(resultrole);
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, props, assocclass,
                              resultclass, role, resultrole, OPS_Associators,
@@ -970,7 +982,7 @@ static CMPIEnumeration *associatorNames(const CMPIBroker * broker,
    sreq.role = setCharsMsgSegment(role);
    sreq.assocClass = setCharsMsgSegment(assocclass);
    sreq.resultRole = setCharsMsgSegment(resultrole);
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, NULL, assocclass, resultclass,
                              role, resultrole, OPS_AssociatorNames, &sreq.hdr, &oHdr,
@@ -989,7 +1001,7 @@ static CMPIEnumeration *references(const CMPIBroker * broker,
    
    sreq.role = setCharsMsgSegment(role);
    sreq.resultClass = setCharsMsgSegment(resultclass);
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, props, NULL,
                              resultclass, role, NULL, OPS_References,
@@ -1007,7 +1019,7 @@ static CMPIEnumeration *referenceNames(const CMPIBroker * broker,
    
    sreq.role = setCharsMsgSegment(role);
    sreq.resultClass = setCharsMsgSegment(resultclass);
-   sreq.userRole = setCharsMsgSegment(NULL);
+   sreq.userRole = setCharsMsgSegment(getRole(context));
    
    return genericEnumRequest(broker, context, cop, NULL, NULL, resultclass,
                              role, NULL, OPS_ReferenceNames, &sreq.hdr, &oHdr,
@@ -1065,8 +1077,7 @@ static CMPIData invokeMethod(const CMPIBroker * broker, const CMPIContext * cont
       sreq->in = setArgsMsgSegment(in);
       sreq->out = setArgsMsgSegment(NULL);
       sreq->method = setCharsMsgSegment(method);
-      sreq->userRole = setCharsMsgSegment(NULL);
-
+      sreq->userRole = setCharsMsgSegment(getRole(context));
       
       if (x) for (n=IM_REQ_REG_SEGMENTS,i=0,s=CMGetArgCount(in,NULL); i<s; i++) {
          CMPIData d=CMGetArgAt(in,i,NULL,NULL);
