@@ -55,6 +55,7 @@ Bugs fixed:
 - 3471814 segfault in objectImpl.c:131,ClObjectGetClString
 - 3499930 Check file repository writes
 - 3497209 oom panic: out of memory using fsp indprovider
+- 3504607 CMPIRole Support in brokerUpc
 
 Changes in 1.3.13
 =================
